force-app/main/default/objects/RCA_Approval_Rule__c/RCA_Approval_Rule__c.object-meta.xml
<CustomObject>
    <description>POV Approval Rule Logic</description>
    <label>Approval Rule</label>
    <nameField>
        <displayFormat>AR-{00000000}</displayFormat>
        <label>Approval Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>