force-app/main/default/objects/RCA_Approval_Rule__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <description>Who is Responsible for Approving the Record</description>
    <label>Approver</label>
    <length>200</length>
    <type>Text</type>
</CustomField>