force-app/main/default/objects/RCA_Approval_Rule__c/fields/Approver_Image__c.field-meta.xml
<CustomField>
    <fullName>Approver_Image__c</fullName>
    <formula>/* Return a plain URL for the image inside the ApprovalPreviewIcons static resource. */
        IF(
            ISPICKVAL(Approver_Type__c, &quot;User&quot;),
            &quot;/resource/ApprovalPreviewIcons/user.svg&quot;,
            &quot;/resource/ApprovalPreviewIcons/group.svg&quot;
        )</formula>
    <inlineHelpText>Formula-produced image HTML for the approver: user or group icon.</inlineHelpText>
    <label>Approver Image</label>
    <type>Text</type>
</CustomField>