force-app/main/default/objects/RCA_Approval_Rule__c/fields/Approver_Type__c.field-meta.xml
<CustomField>
    <fullName>Approver_Type__c</fullName>
    <description>Type of User that will be performing the Approval</description>
    <label>Approver Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>Queue</fullName>
            </value>
            <value>
                <fullName>ManagerManager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>