force-app/main/default/objects/RCA_Approval_Rule__c/fields/Chain__c.field-meta.xml
<CustomField>
    <fullName>Chain__c</fullName>
    <description>Approval Chain for Parallel Approvals</description>
    <label>Chain</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chain 1</fullName>
            </value>
            <value>
                <fullName>Chain 2</fullName>
            </value>
            <value>
                <fullName>Chain 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>