force-app/main/default/objects/RCA_Approval_Rule__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <label>Key</label>
    <length>200</length>
    <type>Text</type>
</CustomField>