force-app/main/default/objects/RCA_Approval_Rule__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>Approval Level 1-5</description>
    <label>Level</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>