force-app/main/default/objects/RCA_Approval_Rule__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <description>Master/Detail w/ Quote</description>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>RCA Approval Rule</relationshipLabel>
    <relationshipName>RCA_Approval_Rule</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>