force-app/main/default/objects/RCA_Approval_Rule__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Title of the Approval</description>
    <inlineHelpText>Title of the Approval</inlineHelpText>
    <label>Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>