force-app/main/default/objects/RCA_Approval_Rule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>IsActive__c</columns>
    <columns>Approver_Type__c</columns>
    <columns>Approver_Image__c</columns>
    <columns>Approver__c</columns>
    <columns>Chain__c</columns>
    <columns>Level__c</columns>
    <columns>Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>